WP-4402: fix spacing and titles display.

--- a/sass/conditionals/insights/idea-story-detail.sass
+++ b/sass/conditionals/insights/idea-story-detail.sass
@@ -13,16 +13,6 @@
 .node-type-idea-story
   #page-title
     display: none
-    +breakpoint($bp-mobile-max)
-      display: block
-      font-family: $font-sans
-      font-size: 28px
-      font-weight: bold
-      line-height: 1
-      padding-bottom: 17px
-  .field-name-title
-    +breakpoint($bp-mobile-max)
-      display: none
 
 .node-idea-story.view-mode-full
 
