--- a/sass/conditionals/news/announcement-detail.sass
+++ b/sass/conditionals/news/announcement-detail.sass
@@ -15,16 +15,6 @@
 .node-type-announcement
   #page-title
     display: none
-    +breakpoint($bp-mobile-max)
-      display: block
-      font-family: $font-sans
-      font-size: 28px
-      font-weight: bold
-      line-height: 1
-      padding-bottom: 17px
-  .field-name-title
-    +breakpoint($bp-mobile-max)
-      display: none
 
 .node-announcement.view-mode-full
 
